--- a/www/css/menu.css
+++ b/www/css/menu.css
@@ -53,6 +53,7 @@ body {
   .entry-content{
     padding: 40px;
     max-width: 67%;
+    margin: auto;
   }
 }
 
@@ -61,6 +62,7 @@ body {
     padding: 10px;
     float: left;
     max-width: 100%;
+    margin: auto;
   }
 
   .topnav a:not(:first-child) {display: none;}
